--- a/AULA_PYTHON2.ipynb
+++ b/AULA_PYTHON2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM417BEf7kXdycztoU803/A",
+      "authorship_tag": "ABX9TyN4kHo+B1Vk0pzJ8ersFcNd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 1"
+        "**Aula 1**"
       ],
       "metadata": {
         "id": "NtFA58UwnWTL"
@@ -138,7 +138,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 2"
+        "**Aula 2**"
       ],
       "metadata": {
         "id": "VrRSpptshQ03"
@@ -301,7 +301,7 @@
         "id": "6klOi-ANskJT",
         "outputId": "699e7faa-78d2-4ca2-e434-c29043fb161c"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Aula 3"
+        "**Aula 3**"
       ],
       "metadata": {
         "id": "FO5u57NZnULO"
@@ -345,7 +345,7 @@
         "id": "tJmNkOBxnW0C",
         "outputId": "3d4643ea-0895-4481-dc21-ac64763ccf89"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -367,7 +367,7 @@
       "metadata": {
         "id": "HSjFFC_opXaC"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -385,7 +385,7 @@
         "id": "yX7DHy_qqoGp",
         "outputId": "e3633d80-6eed-440f-ca2a-b46ad32be253"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +419,7 @@
         "id": "vk9wZqKlrtpa",
         "outputId": "280aa2ce-54ce-4bb9-cce6-831188214b29"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -446,7 +446,7 @@
         "id": "X_nMQfibsTz0",
         "outputId": "e7f06e1d-2639-4c8d-8157-f51c361ac6cc"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
