--- a/AULA_PYTHON2.ipynb
+++ b/AULA_PYTHON2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN4kHo+B1Vk0pzJ8ersFcNd",
+      "authorship_tag": "ABX9TyOQF1mZGV2ttDf20KN3Dilc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,6 +279,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Aula 3**"
+      ],
+      "metadata": {
+        "id": "hghuyuvCzae0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Figurinhas"
       ],
       "metadata": {
@@ -317,7 +326,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Aula 3**"
+        "**Aula 4**"
       ],
       "metadata": {
         "id": "FO5u57NZnULO"
@@ -456,6 +465,124 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Aula 5**"
+      ],
+      "metadata": {
+        "id": "o2W5Oewmqi0E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Portas"
+      ],
+      "metadata": {
+        "id": "bVyzT1CkqlHE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P = int(input(\"Digite a posição da porta P (0 ou 1): \"))\n",
+        "R = int(input(\"Digite a posição da porta R (0 ou 1): \"))\n",
+        "if P == 0:\n",
+        "  print(\"C\")\n",
+        "elif R == 1:\n",
+        "  print (\"A\")\n",
+        "else:\n",
+        "  print(\"B\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BrcXwbbHql_k",
+        "outputId": "7f7e7dd4-3cdb-46b9-dc01-e8248d2f7f76"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a posição da porta P (0 ou 1): 1\n",
+            "Digite a posição da porta R (0 ou 1): 0\n",
+            "B\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "P = int(input(\"Digite a posição da porta P (0 ou 1): \"))\n",
+        "Q = int(input(\"Digite a posição da porta Q (0 ou 1)\"))\n",
+        "R = int(input(\"Digite a posição da porta R (0 ou 1): \"))\n",
+        "if P == 0:\n",
+        "  print (\"C\")\n",
+        "elif R == 1:\n",
+        "  print(\"A\")\n",
+        "elif Q == 1:\n",
+        "  print(\"D\")\n",
+        "else:\n",
+        "  print(\"B\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKsW5yCFxC4c",
+        "outputId": "f3849575-57ed-45f3-dcaf-e8441eee172b"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite a posição da porta P (0 ou 1): 0\n",
+            "Digite a posição da porta Q (0 ou 1)1\n",
+            "Digite a posição da porta R (0 ou 1): 0\n",
+            "C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Aula 6**"
+      ],
+      "metadata": {
+        "id": "nVCfs9V3zIaU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Idades"
+      ],
+      "metadata": {
+        "id": "_rHNLuquzsNd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcula_idade_maior(idade_monica, idade_filho1, idade_filho2):\n",
+        "  idade_filho3 = idade_monica - idade_filho1 - idade_filho2\n",
+        "  idade_maxima = max(idade_filho1, idade_filho2, idade_filho3)\n",
+        "  return idade_filho3, idade_maxima"
+      ],
+      "metadata": {
+        "id": "vJTl-c_szeQ8"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
