--- a/AULA_PYTHON.ipynb
+++ b/AULA_PYTHON.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJ+zuadBpxxtlJZ+h39vtn",
+      "authorship_tag": "ABX9TyOQF1mZGV2ttDf20KN3Dilc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -279,6 +279,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Aula 3**"
+      ],
+      "metadata": {
+        "id": "hghuyuvCzae0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Figurinhas"
       ],
       "metadata": {
@@ -317,7 +326,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Aula 3**"
+        "**Aula 4**"
       ],
       "metadata": {
         "id": "FO5u57NZnULO"
@@ -460,7 +469,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Aula 4**"
+        "**Aula 5**"
       ],
       "metadata": {
         "id": "o2W5Oewmqi0E"
@@ -523,11 +532,11 @@
         "  print(\"B\")"
       ],
       "metadata": {
-        "id": "MKsW5yCFxC4c",
-        "outputId": "f3849575-57ed-45f3-dcaf-e8441eee172b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MKsW5yCFxC4c",
+        "outputId": "f3849575-57ed-45f3-dcaf-e8441eee172b"
       },
       "execution_count": 11,
       "outputs": [
@@ -542,6 +551,38 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Aula 6**"
+      ],
+      "metadata": {
+        "id": "nVCfs9V3zIaU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Idades"
+      ],
+      "metadata": {
+        "id": "_rHNLuquzsNd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcula_idade_maior(idade_monica, idade_filho1, idade_filho2):\n",
+        "  idade_filho3 = idade_monica - idade_filho1 - idade_filho2\n",
+        "  idade_maxima = max(idade_filho1, idade_filho2, idade_filho3)\n",
+        "  return idade_filho3, idade_maxima"
+      ],
+      "metadata": {
+        "id": "vJTl-c_szeQ8"
+      },
+      "execution_count": 16,
+      "outputs": []
     }
   ]
 }
